fixed footer issue causing extra space

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -210,10 +210,10 @@ border-radius: 5px;
 
 #footer {
 background: white;
-margin: 25px auto 0 auto;
+margin: 50px auto 0 auto;
 border-top: 2px solid #c6c6c6;
 text-align: center;
-min-height: 100px;
+min-height: 50px;
 }
 
 #footer ul {
